syntax = "proto3";
package FileUploaderService;
option csharp_namespace = "gRpcFileServiceSample.Client.Protos";

message FileUploadResponse {
	string fileName=1;
	int64 totalSize=2;
}